--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -293,6 +293,7 @@
         "#predict and evaluate\n",
         "y_pred = tree.predict(X_test)\n",
         "acc = accuracy_score(y_test, y_pred)\n",
+        "#prints how well model predicts\n",
         "print(f\"Model Accuracy: {acc:.3f}\")\n",
         "\n",
         "#create confusion matrix\n",
@@ -380,7 +381,12 @@
         "plt.figure(figsize=(5, 4))\n",
         "disp.plot(cmap='Greens', values_format='d')\n",
         "plt.title(\"Confusion Matrix with Rating Agency as Feature\")\n",
-        "plt.show()"
+        "plt.show()\n",
+        "\n",
+        "#After adding the rating gagency, the model accuracy increased from 0.682 (w/o rating agency)\n",
+        "#to 0.756 (w/ rating agency). This suggests that adding the rating agency feature imporves\n",
+        "#the model's ability to predict bond ratings. It also suggests that the rating agency could\n",
+        "#influence ratings themselves, alongside previous factors."
       ],
       "metadata": {
         "colab": {
