--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -28,13 +28,55 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "Q1\n",
+        "The Gini impurity is a good loss function for categorical target variables because it’s fast to compute and gives a direct measure of how pure or mixed a group of classes is. If a node has mostly one category, the Gini score is low (which is ideal), but if it has a mix of categories, the score is higher. Decision trees try to split in ways that lower the Gini, meaning each branch becomes more “pure.” It can be super useful for categorical targets because it directly captures how uneve the class distribution is."
+      ],
       "metadata": {
-        "id": "1P8qp1kVE3AT"
-      },
-      "outputs": [],
-      "source": []
+        "id": "vjJlNuWMSU0-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q2\n",
+        "Trees tend to overfit because they will keep splitting until they perfectly separate the training data. However, these splits might not always been based on actual patterns, they are based off of random noise. To control that, we can set restrictions, like limiting the tree depths, requiring a minimum number of samples per leaf, or pruning it after it has grown. Essentially, stopping the tree from being too specific allows it to generalize to other data."
+      ],
+      "metadata": {
+        "id": "PJrT4ejzSrKS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q3\n",
+        "False. Trees can perform well with categorical and numerical variables. Due to the fact that trees do not assume linear relationships, they can many data types. With numeric data, they can split it using cutoff ranges.  "
+      ],
+      "metadata": {
+        "id": "FJzXKn6DTJfG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q4\n",
+        "Restricting the split to two branches keeps the algorithm simple and efficient. It is much easier to compare two things than compare many options. Binary trees are also faster to train, and they tend to generalize better because they break decisions down into smaller, more interpretable steps rather than creating a bunch of complex branches all at once."
+      ],
+      "metadata": {
+        "id": "Tr0v6C8kT-YD"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Q5\n",
+        "If the tree is very deep with tons of tiny branches and leaves that each hold just one or two samples, it’s most likely overfitting the data. If the tree is super shallow, with only a couple splits and broad groupings, it’s probably underfitting.\n",
+        "You can also check trainning and test accuracy. High training accuracy and low test accuracy suggests that overfitting is occurring, while both being low suggests underfitting."
+      ],
+      "metadata": {
+        "id": "i9X7KChmUTkB"
+      }
     },
     {
       "cell_type": "markdown",
